tests/NormalTests/paczka2/big_fuzzy/58773567.err
Error in line 9: q0ev A318 0,81
Error in line 11: XdgB S428 93,8
Error in line 20: A66 S428 3,4
Error in line 25: A66 S160 16,2
Error in line 26: LnDS A318 78,7
Error in line 54: z0FwB S428 94,8
Error in line 50: q0ev S428 17,2
Error in line 63: LgwAU2PMSS1600,2
Error in line 64: A66 A318 90,1
Error in line 75: XdgB A318 3,5
Error in line 74: LnDS S160 32,8
Error in line 80: LnDS A318 71,6
Error in line 88: XdgB A318 65,2
Error in line 93: XdgB S160 12,9
Error in line 103: LgwAU2PMS S160 37,90
Error in line 96: i70fo9T S160 53,8
Error in line 106: i70fo9T A318 40,7
Error in line 98: XdgB S160 70,1
Error in line 116: z0FwB S160 41,27
Error in line 124: i70fo¼T A66 14,8
Error in line 117: z0FwB S160 27,5
Error in line 125: A66 S160 84,8
Error in line 132: LnDS S160 67,1
Error in line 130: A66 S428 99,4
Error in line 140: q0ev A66 66,9
Error in line 128: z0FwB A318 47,5
Error in line 138: i70fo9T S428 42,7
Error in line 147: z0FwB S160 13,9
Error in line 144: q0ev A318 32,0
Error in line 151: XdgB A66 87,1
Error in line 109: LgwAU2PMS S160 164,6
Error in line 154: LgwAU2PMS S428 40,7
Error in line 146: A66 A66 86,6
Error in line 165: LnDS A318 12,4
Error in line 164: A66 S160 9,4
Error in line 167: A66 A66 87,2
Error in line 188: LgwAU2PMS S160 33,9
Error in line 210: LnDS A318 76,0
Error in line 212: LnDS S160 15,0
Error in line 222: LnDS A318 -6,4
Error in line 217: LnDS A318 93,9
Error in line 230: LgwAU2PMS S428 14,5
Error in line 245: A66 A318 82,4
